--- a/e-shop/404.html
+++ b/e-shop/404.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul >
 						<li><a href="login.php">Login</a></li>
 						<li><a href="register.php">Register</a></li>
-						<li><a href="checkout.html">Checkout</a></li>
+						<li><a href="checkout.php">Checkout</a></li>
 					</ul>
 				</div>
 				
@@ -251,7 +251,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li><a class="play-icon popup-with-zoom-anim" href="#small-dialog"><i class="glyphicon glyphicon-search"> </i></a></li>
 					</ul>
 					<div class="cart box_1">
-						<a href="checkout.html">
+						<a href="checkout.php">
 						<h3> <div class="total">
 							<span class="simpleCart_total"></span></div>
 							<img src="images/cart.png" alt=""/></h3>
